@@ -117,17 +117,17 @@ CONF_DIR = /usr/local/etc/ispcp
 
 LOG_DIR = /var/log/ispcp
 
-PHP_STARTER_DIR = /usr/local/www/apache22/fcgi
+PHP_STARTER_DIR = /usr/local/www/fcgi
 
-ROOT_DIR = /usr/local/www/apache22/ispcp
+ROOT_DIR = /usr/local/www/ispcp
 
 ROOT_USER = root
 
 ROOT_GROUP = wheel
 
-GUI_ROOT_DIR = /usr/local/www/apache22/ispcp/gui
+GUI_ROOT_DIR = /usr/local/www/ispcp/gui
 
-APACHE_WWW_DIR = /usr/local/www/apache22/data
+APACHE_WWW_DIR = /usr/local/www/data
 
 SCOREBOARDS_DIR = /var/www/scoreboards
 
@@ -176,9 +176,9 @@ AWSTATS_CONFIG_DIR = /usr/local/etc/awstats
 
 AWSTATS_ENGINE_DIR = /usr/lib/cgi-bin
 
-AWSTATS_WEB_DIR = /usr/local/www/apache22/data/awstats
+AWSTATS_WEB_DIR = /usr/local/www/data/awstats
 
-AWSTATS_ROOT_DIR = /usr/local/www/apache22/ispcp/engine/awstats
+AWSTATS_ROOT_DIR = /usr/local/www/ispcp/engine/awstats
 
 #
 # APACHE data
@@ -192,17 +192,17 @@ APACHE_CONF_DIR = /usr/local/etc/apache22
 
 APACHE_CMD = /usr/local/sbin/httpd
 
-APACHE_LOG_DIR = /usr/local/www/apache22/logs
+APACHE_LOG_DIR = /usr/local/www/logs
 
-APACHE_BACKUP_LOG_DIR = /usr/local/www/apache22/logs/backup
+APACHE_BACKUP_LOG_DIR = /usr/local/www/logs/backup
 
-APACHE_USERS_LOG_DIR = /usr/local/www/apache22/logs/users
+APACHE_USERS_LOG_DIR = /usr/local/www/logs/users
 
-APACHE_MODS_DIR = /usr/local/etc/apache22/extra/
+APACHE_MODS_DIR = /usr/local/etc/apache22/extra
 
 APACHE_SITES_DIR = /usr/local/etc/apache22/Includes
 
-APACHE_CUSTOM_SITES_CONFIG_DIR = /etc/apache2/ispcp
+APACHE_CUSTOM_SITES_CONFIG_DIR = /usr/local/etc/apache22/ispcp
 
 APACHE_SUEXEC_USER_PREF = vu
 
@@ -250,9 +250,9 @@ MTA_MAILBOX_GID = 8
 
 MTA_MAILBOX_GID_NAME = postfix
 
-MTA_SASLDB_FILE = /usr/local/etc/sasldb2
+MTA_SASLDB_FILE = /usr/local/etc/courier-imap/sasldb2
 
-ETC_SASLDB_FILE = /usr/local/etc/sasldb2
+ETC_SASLDB_FILE = /usr/local/etc/courier-imap/sasldb2
 
 CMD_SASLDB_LISTUSERS2 = /usr/local/sbin/sasldblistusers2
 
@@ -268,7 +268,7 @@ CMD_NEWALIASES = /usr/bin/newaliases
 
 COURIER_CONF_DIR = /usr/local/etc/courier-imap
 
-AUTHLIB_CONF_DIR = /usr/local/etc
+AUTHLIB_CONF_DIR =  /usr/local/etc/authlib
 
 CMD_MAKEUSERDB = /usr/local/sbin/makeuserdb
 
@@ -284,7 +284,7 @@ BACKUP_ISPCP = yes
 
 BACKUP_DOMAINS = yes
 
-BACKUP_ROOT_DIR = /usr/local/www/apache22/ispcp/engine/backup
+BACKUP_ROOT_DIR = /usr/local/www/ispcp/engine/backup
 
 CMD_CRONTAB = /usr/bin/crontab
 
@@ -331,11 +331,11 @@ MAIL_TRAFF_LOG = mail.log
 
 PREV_TRAFF_LOG_MAX_SIZE = 10485760
 
-TRAFF_ROOT_DIR = /usr/local/www/apache22/ispcp/engine/traffic
+TRAFF_ROOT_DIR = /usr/local/www/ispcp/engine/traffic
 
-TOOLS_ROOT_DIR = /usr/local/www/apache22/ispcp/engine/tools
+TOOLS_ROOT_DIR = /usr/local/www/ispcp/engine/tools
 
-QUOTA_ROOT_DIR = /usr/local/www/apache22/ispcp/engine/quota
+QUOTA_ROOT_DIR = /usr/local/www/ispcp/engine/quota
 
 #
 # AMaViS data
@@ -351,7 +351,7 @@ USER_INITIAL_THEME = omega_original
 
 FTP_USERNAME_SEPARATOR = @
 
-FTP_HOMEDIR = /usr/local/www/apache22/data
+FTP_HOMEDIR = /usr/local/www/data
 
 IPS_LOGO_PATH = ../themes/user_logos
 
@@ -400,7 +400,7 @@ HTPASSWD_CMD = /usr/local/sbin/htpasswd
 # backup management
 #
 
-BACKUP_FILE_DIR = /usr/local/www/apache22/ispcp/backups
+BACKUP_FILE_DIR = /usr/local/www/ispcp/backups
 
 #
 # Developer Mode
